tests/errors/ref_misspelled_builtin.js
/*
Expected Error:
ReferenceError
*/
comsole.log("hello");
